AOT cache creation crashes in ~ThreadTotalCPUTimeClosure()

XMLWordPrintable

    • b05

        There is following crash occurred during AOT jck testing in jdk25 ATR:

        # SIGSEGV (0xb) at pc=0x0000000106d6cddc, pid=82575, tid=20995
        #
        # JRE version: Java(TM) SE Runtime Environment (25.0+26) (fastdebug build 25-ea+26-LTS-3358)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-ea+26-LTS-3358, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
        # Problematic frame:
        # V [libjvm.dylib+0x5a4ddc] ThreadTotalCPUTimeClosure::~ThreadTotalCPUTimeClosure()+0x44
        #
        # Core dump will be written. Default location: core.82575
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -XX:AOTMode=create -XX:AOTConfiguration=aot_1080726936.aotconf -XX:AOTCache=aot_1080726936.aot -Xlog:class+path=info -Xlog:cds --enable-preview -Djava.awt.headless=true -XX:+AOTClassLinking -XX:+EnableDynamicAgentLoading -Djdk.attach.allowAttachSelf=true -Djava.security.properties=/System/Volumes/Data/mesos/work_dir/jib-master/install/jck/25/b12/extra/bundles/JCK-extra-25.zip/JCK-extra-25/extra.security.properties -XX:MaxRAMPercentage=6.25

        Host: jpg-mac-arm-830.oraclecorp.com, "Mac14,3" arm64, 8 cores, 16G, Darwin 23.4.0, macOS 14.4.1 (23E224)
        Time: Fri Jun 13 06:56:39 2025 GMT elapsed time: 1.086809 seconds (0d 0h 0m 1s)

        --------------- T H R E A D ---------------

        Current thread (0x000000012a008210): ConcurrentGCThread "G1 Service" [id=20995, stack(0x000000016c1c4000,0x000000016c3c7000) (2060K)]

        Stack: [0x000000016c1c4000,0x000000016c3c7000], sp=0x000000016c3c6e60, free space=2059k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0x5a4ddc] ThreadTotalCPUTimeClosure::~ThreadTotalCPUTimeClosure()+0x44
        V [libjvm.dylib+0x7bc508] G1ServiceThread::run_task(G1ServiceTask*)+0xec
        V [libjvm.dylib+0x7bc6c0] G1ServiceThread::run_service()+0x24
        V [libjvm.dylib+0x533c6c] ConcurrentGCThread::run()+0x24
        V [libjvm.dylib+0x1146de0] Thread::call_run()+0xf0
        V [libjvm.dylib+0xebc768] thread_native_entry(Thread*)+0x138
        C [libsystem_pthread.dylib+0x6f94] _pthread_start+0x88

        siginfo: si_signo: 11 (SIGSEGV), si_code: 2 (SEGV_ACCERR), si_addr: 0x0000000000000000


        The crash occurs during AOT cache creation.

              Assignee:
              Ioi Lam
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: