8360164: AOT cache creation crashes in ~ThreadTotalCPUTimeClosure()