src/hotspot/share/runtime/java.cpp
@@ -432,8 +432,10 @@ void before_exit(JavaThread* thread, bool halt) {
 #if INCLUDE_CDS
   // Dynamic CDS dumping must happen whilst we can still reliably
   // run Java code.
-  DynamicArchive::dump_at_exit(thread);
-  assert(!thread->has_pending_exception(), "must be");
+  if (CDSConfig::is_dumping_dynamic_archive()) {
+    DynamicArchive::dump_at_exit(thread);
+    assert(!thread->has_pending_exception(), "must be");
+  }
 #endif
 
   // Actual shutdown logic begins here.
